--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,13 @@ project(Frisen
 
 message(STATUS "Project URL : " ${PROJECT_HOMEPAGE_URL})
 message(STATUS "Project Description : " ${PROJECT_DESCRIPTION})
+
+# Setting the CXX standard support
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
+# Interprocedural optimization
+include(CheckIPOSupported)
+check_ipo_supported(RESULT ipo_supported)
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ${ipo_supported})
