First display window

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,15 @@ cmake_minimum_required(VERSION 3.26)
 project(Frisen 
         DESCRIPTION "Game engine development project, mainly based on two books : Game Engine Architecture by Jason Gregory and Modern CMake for C++ by Rafal Świdziński."  
         HOMEPAGE_URL https://github.com/tgrillon/Frisen.git 
-        LANGUAGES CXX)
+        LANGUAGES CXX C)
 
 message(STATUS "Project URL : " ${PROJECT_HOMEPAGE_URL})
 message(STATUS "Project Description : " ${PROJECT_DESCRIPTION})
+
+# Disabling In-source builds
+if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
+  message(FATAL_ERROR "In-source builds are not allowed : please remove CMakeCache.txt file and CMakeFiles directory")
+endif()
 
 # Setting the CXX standard support
 set(CMAKE_CXX_STANDARD 20)
@@ -16,3 +21,5 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 include(CheckIPOSupported)
 check_ipo_supported(RESULT ipo_supported)
 set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ${ipo_supported})
+
+add_subdirectory(Frisen bin)
