VAO VBO & EBO classes

--- a/Frisen/src/Renderer/CMakeLists.txt
+++ b/Frisen/src/Renderer/CMakeLists.txt
@@ -1,4 +1,10 @@
-add_executable(Renderer main.cpp)
+add_executable(Renderer main.cpp 
+                        VertexArray.cpp
+                        VertexBuffer.cpp
+                        IndexBuffer.cpp
+                        BufferLayout.cpp)
+
 target_link_libraries(Renderer PRIVATE 
                                glad 
-                               glfw)
+                               glfw
+                               glm)
